<resources>
    <!-- Global -->
    <string name="app_name">Chakra Friends</string>
    <string name="loading">Loading</string>

    <!-- Login -->
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_button">Login</string>
    <string name="login_error">There has been an error logging in.</string>

    <!-- Feed -->
    <string name="feed">Feed</string>
    <string name="feed_empty">No items</string>

    <!-- Profile -->
    <string name="profile">Your Profile</string>

    <!-- Locations -->
    <string name="locations">Locations</string>
    <string name="locations_add">Add Location</string>

    <!-- Logout -->
    <string name="logout">Logout</string>
    <string name="logout_goodbye">See you soon</string>

    <!-- Developer -->
    <string name="impl_content_description_needed">Empty</string>
    <string name="impl_bottom_base_behavior" translatable="false">com.google.android.material.bottomsheet.BottomSheetBehavior</string>

</resources>
