<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/dest_feed">

    <fragment
        android:id="@+id/dest_feed"
        android:name="app.itsyour.chakra.android.feature.main.feed.FeedFragment"
        android:label="@string/feed"
        tools:layout="@layout/fragment_feed">
    </fragment>

    <fragment
        android:id="@+id/dest_profile"
        android:name="app.itsyour.chakra.android.feature.main.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile">
    </fragment>

    <fragment
        android:id="@+id/dest_locations"
        android:name="app.itsyour.chakra.android.feature.main.location.LocationFragment"
        android:label="@string/locations"
        tools:layout="@layout/fragment_location">
    </fragment>

    <activity
        android:id="@+id/dest_logout"
        android:name="app.itsyour.chakra.android.feature.main.logout.LogoutActivity"
        android:label="@string/logout"
        tools:layout="@layout/activity_logout" />

</navigation>