<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp">

        <ImageView
            android:id="@+id/loginImage"
            android:layout_width="wrap_content"
            android:layout_height="196dp"
            android:layout_marginTop="96dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_lotus_flower"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_lotus_flower" />

        <TextView
            android:id="@+id/loginAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAppearance="@style/Logo"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginImage" />

        <EditText
            android:id="@+id/loginEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/login_email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:text="joseph@itsyour.app"
            app:layout_constraintBottom_toTopOf="@+id/loginPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginAppName"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/login_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:text="testpassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginEmail" />

        <TextView
            android:id="@+id/loginError"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/login_error"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_dark"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/loginButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="There has been an error logging in."
            tools:visibility="visible" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/login_button"
            android:textAlignment="center"
            android:textColor="?android:attr/textColorPrimaryInverse"
            android:enabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:cornerRadius="12dp"
            style="?attr/buttonStyle"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>